[package]
edition = "2021"
name = "blazu"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["compat-mode"] }
napi-derive = "2.12.2"
serde = "1.0.198"
serde_json = "1.0.116"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
